More vertical optical text align fixes

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -3,3 +3,7 @@
   @extend .font-family-accent;
   margin-bottom: -0.15em;
 }
+
+.nav-link {
+  line-height: 1;
+}
